--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ APP_SECRET=39059a4ef325f5d3d63ed8077fc7ed71
 URL="https://127.0.0.1:8001"
 
 ###> doctrine/doctrine-bundle ###
-DATABASE_URL="mysql://root:myagenda123@127.0.0.1:3306/myagenda?serverVersion=mariadb-10.4.0"
+DATABASE_URL="mysql://root:myagenda123@127.0.0.1:3306/myagendadb?serverVersion=mariadb-10.4.0"
 
 ###< doctrine/doctrine-bundle ###
 
